welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:48: error: expected class or object definition
def forme(c:Color) {
^PatternPicture:58: error: Unmatched closing brace '}' ignored here
}
^